--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.4",
     "classnames": "^2.2.6",
     "firebase": "^5.5.5",
     "react": "^16.5.2",
@@ -12,6 +13,7 @@
     "react-router-dom": "^4.4.0-beta.4",
     "react-scripts": "2.0.5",
     "redux": "^4.0.1",
+    "redux-auth-wrapper": "^2.0.3",
     "redux-firestore": "^0.5.8"
   },
   "scripts": {
@@ -19,9 +21,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
